--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametroautoliq.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametroautoliq.properties
@@ -1,6 +1,6 @@
 #Titulo y Fieldset
-titulo=Parametros Autoliquidaciones
-parametroautoliq=Parametros Autoliquidaciones
+titulo=Par\u00e1metros Autoliquidaciones
+parametroautoliq=Par\u00e1metros Autoliquidaciones
 #Toolbar
 guardar=Guardar
 editar=Editar
@@ -19,29 +19,31 @@ ingresarnuevo=Ingresar nueva Informaci\u00f3n
 #Duplicar Registro
 duplicarregistro=Duplicar Registro
 #RASTRO
-confirmarRastro=La tabla 'PARAMETROSAUTOLIQ' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
-confirmarRastroHistorico=La tabla PARAMETROSAUTOLIQ tiene rastros historicos, \u00bfDesea continuar?
-errorRastroHistorico=La tabla no tiene rastros historicos.
+confirmarRastro=La tabla 'PARAMETROSAUTOLIQ' tiene rastros para el registro seleccionado, \u00bfDesea continuar?
+confirmarRastroHistorico=La tabla PARAMETROSAUTOLIQ tiene rastros hist\u00f3ricos, \u00bfDesea continuar?
+errorRastroHistorico=La tabla no tiene rastros hist\u00f3ricos.
 errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
-errorObjetosDB=La tabla 'PARAMETROSAUTOLIQ' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+errorObjetosDB=La tabla 'PARAMETROSAUTOLIQ' no se encuentra en ObjetosDB. Por favor comunicarse con soporte.
 #Otros
-vacio=No se encontrar\u00f3n resultados para la b\u00fasqueda
-lovvacio=No se encontraron resultados con el criterio de busqueda.
-si=Si
+vacio=No se encontraron resultados para la b\u00fasqueda
+lovvacio=No se encontraron resultados con el criterio de b\u00fasqueda.
+si=S\u00ed
 no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
-atras=Atras
+atras=Atr\u00e1s
 validacionNuevo=Para agregar un nuevo idioma es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
-cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+cambio=A\u00fan hay cambios sin guardar, \u00bfDesea guardar los cambios?
+refrescar= Deshacer cambios no guardados
 salir=Salir
 ano=A\u00f1o
 mes=Mes
@@ -53,7 +55,7 @@ nombre=Nombre
 empresaM=Empresas
 buscarE=Buscar Empresa: 
 nit=NIT
-codigo=Codigo
+codigo=C\u00f3digo
 errorRegNullParametro=Los campos A\u00f1o-Mes-Empresa son obligatorios.
 anoN=A\u00f1o: 
 mesN=Mes: 
@@ -79,19 +81,19 @@ mesX=Mes
 tipoTrabajadorXX=Tipo_Trabajador
 tipoTrabajadorX=Tipo Trabajador
 empresaX=Empresa
-textInfo=Dado el mes y el a\u00f1o usted puede obtener el aporte de diferentes entidades. Verifique que la fecha inicial y final de los parametros de reportes coincidan con el periodo a liquidar, en el proceso de liquidacion.
+textInfo=Dado el mes y el a\u00f1o usted puede obtener el aporte de diferentes entidades. Verifique que la fecha inicial y final de los par\u00e1metros de reportes coincidan con el per\u00edodo a liquidar, en el proceso de liquidaci\u00f3n.
 buscar=[Buscar]
 novAuto=[Nov. Auto.]
 incaPag=[Incap. Pagadas]
 eliminarToda=[Eliminar Toda Auto.]
-procesoLiq=[Proceso Liquidacion]
-generacionArch=[Generacion Archivos]
-btn1=Buscar un empleado en el periodo de autoliquidacion
-btn2=Valores de otras novedades que afectan totales en la autoliquidacion
-btn3=Incapacidades medicas pagadas
-btn4=Eliminacion de los registros recolectados en el proceso de liquidacion de aportes
-btn5=Proceso que recolecta los valores aportados para la autoliquidacion de la seguridad social en el periodo
-btn6=Generacion del archivo plano de la autoliquidacion y reportes soportes
+procesoLiq=[Proceso Liquidaci\u00f3n]
+generacionArch=[Generaci\u00f3n Archivos]
+btn1=Buscar un empleado en el per\u00edodo de autoliquidacion
+btn2=Valores de otras novedades que afectan totales en la autoliquidaci\u00f3n
+btn3=Incapacidades m\u00e9dicas pagadas
+btn4=Eliminaci\u00f3n de los registros recolectados en el proceso de liquidaci\u00f3n de aportes
+btn5=Proceso que recolecta los valores aportados para la autoliquidaci\u00f3n de la seguridad social en el per\u00edodo
+btn6=Generaci\u00f3n del archivo plano de la autoliquidaci\u00f3n y reportes soportes
 btn7=Acumula las diferencias de los valores aportados modificados manualmente
 aportesEntidades=Aportes Entidades
 codEmpl=Cod. Empleado
@@ -165,12 +167,12 @@ textCodCTT=Codigo Centro Costo
 textAVPEValor=Valor Aporte Voluntario Empleado
 textAVPPValor=Valor Aporte Voluntario Patronal
 textRETCONTA=Retencion Contigente por Aportes Voluntarios/AFC
-textCodNEPS=Codigo EPS a la cual se traslada el empleado
-textCodNAFP=Codigo AFP a la cual se traslada el empleado
+textCodNEPS=C\u00f3digo EPS a la cual se traslada el empleado
+textCodNAFP=C\u00f3digo AFP a la cual se traslada el empleado
 textEGValor=Valor de incapacidad por enfermedad general
-textEGAuto=Numero de la autorizacion de la incapacidad por enfermedad general
+textEGAuto=N\u00famero de la autorizaci\u00f3n de la incapacidad por enfermedad general
 textMatValor=Valor de la incapacidad por maternidad
-textMatAuto=Numero de la autorizacion por maternidad
+textMatAuto=N\u00famero de la autorizaci\u00f3n por maternidad
 textUPCValor=Valor adicional por UPC
 tipoEntidadM=Tipos Entidades
 buscarTE=Buscar Tipo Entidad: 
@@ -178,11 +180,11 @@ empleadoM=Empleados
 buscarEMPL=Buscar Empleado: 
 terceroM=Terceros
 buscarT=Buscar Tercero: 
-confirmarRastroAporte=La tabla 'APORTESENTIDADES' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
-confirmarRastroHistoricoAporte=La tabla 'APORTESENTIDADES' tiene rastros historicos, \u00bfDesea continuar?
-errorObjetosDBAporte=La tabla 'APORTESENTIDADES' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+confirmarRastroAporte=La tabla 'APORTESENTIDADES' tiene rastros para el registro seleccionado, \u00bfDesea continuar?
+confirmarRastroHistoricoAporte=La tabla 'APORTESENTIDADES' tiene rastros hist\u00f3ricos, \u00bfDesea continuar?
+errorObjetosDBAporte=La tabla 'APORTESENTIDADES' no se encuentra en ObjetosDB. Por favor comunicarse con soporte.
 errorBorrarParametro=Para eliminar el registro es necesario que no tenga asociados ningun elemento AportesEntidades
-editarCodEmplD=Codigo Empleado
+editarCodEmplD=C\u00f3digo Empleado
 editarAnoAD=A\u00f1o Aporte Entidad
 editarMesAD=Mes Aporte Entidad
 editarNombreEmplD=Nombre Empleado
@@ -218,16 +220,16 @@ editarINTED=INTE Aporte Entidad
 editarTarifaEPSD=Tarifa EPS
 editarTarifaAAFPD=Tarifa AFP
 editarTarifaACTTD=Tarifa CTT
-editarCodigoCTTD=Codigo CTT
+editarCodigoCTTD=C\u00f3digo CTT
 editarAvpeValorD=AVPE Valor
 editarAvppValorD=AVPP Valor
 editarRetcontaValorD=RETCONTA Valor
-editarCodigoNEPSD=Codigo NEPS
-editarCodigoNAFPD=Codigo NAFP
+editarCodigoNEPSD=C\u00f3digo NEPS
+editarCodigoNAFPD=C\u00f3digo NAFP
 editarEgValorD=EG Valor
-editarEgAutorizacionD=EG Autorizacion
+editarEgAutorizacionD=EG Autorizaci\u00f3n
 editarMaternidadValorD=Maternidad Valor
-editarMaternidadAutoD=Maternidad Autorizacion
+editarMaternidadAutoD=Maternidad Autorizaci\u00f3n
 editarUpcValorD=UPC Valor
 editarTipoD=Tipo Aporte Entidad
 editarTPD=Tipo Pension
@@ -239,8 +241,8 @@ editarTarifaSenaD=Tarifa SENA
 editarTarifaICBFD=Tarifa ICBF
 editarTarifaESAPD=Tarifa ESAP
 editarTarifaMEND=Tarifa MEN
-codEmplXX=Codigo_Empleado
-codEmplX=Codigo Empleado
+codEmplXX=C\u00f3digo_Empleado
+codEmplX=C\u00f3digo Empleado
 nombreEmpleadoXX=Nombre_Empleado
 nombreEmpleadoX=Nombre Empleado
 nitTerceroXX=NIT_Tercero
@@ -256,8 +258,8 @@ ajustePatronalX=Ajuste Patronal
 solidaridadX=Solidaridad
 subSistenciaX=SubSistencia
 subsPensionadosX=SubsPensionados
-salarioBasicoXX=Salario_Basico
-salarioBasicoX=Salario Basico
+salarioBasicoXX=Salario_B\u00e1sico
+salarioBasicoX=Salario B\u00e1sico
 ibcX=IBC
 ibcReferenciaXX=IBC_Referencia
 ibcReferenciaX=IBC Referencia
@@ -295,10 +297,10 @@ avppValorXX=AVPP_Valor
 avppValorX=AVPP Valor
 retcontaValorXX=RETCONTA_Valor
 retcontaValorX=RETCONTA Valor
-codigoNEPSXX=Codigo_NEPS
-codigoNEPSX=Codigo NEPS
-codigoNAFPXX=Codigo_NAFP
-codigoNAFPX=Codigo NAFP
+codigoNEPSXX=C\u00f3digo_NEPS
+codigoNEPSX=C\u00f3digo NEPS
+codigoNAFPXX=C\u00f3digo_NAFP
+codigoNAFPX=C\u00f3digo NAFP
 egValorXX=EG_Valor
 egValorX=EG Valor
 egAutorizacionXX=EG_Autorizacion
@@ -329,12 +331,13 @@ tarifaMENXX=Tarifa_MEN
 tarifaMENX=Tarifa MEN
 aporteEntidadM=Aportes Entidades
 buscarBA=Buscar Aporte: 
-errorProcesoLiquidacionFechas=El periodo a procesar de autoliquidacion no coincide con las fechas hasta de ParametroReportes y ParametrosEstructuras. \u00bfDesea cambiar las fechas automaticamente?
+errorProcesoLiquidacionFechas=El per\u00edodo a procesar de autoliquidaci\u00f3n no coincide con las fechas hasta de Par\u00e1metro Reportes y Par\u00e1metros Estructuras. \u00bfDesea cambiar las fechas autom\u00e1ticamente?
 procesoLiquidacionOK=\u00bf Desea continuar con el proceso de liquidacion ?
 confirmarBorrarTodoAuto=\u00bf Esta seguro de borrar ?
-errorAcumularDiferencia=El periodo a procesar de autoliquidaciones no coincide con la fecha hasta de ParametrosReportes y ParametrosLiquidacion. Por favor cambie las fechas para que coincidan con el periodo.
-acumularDiferenciaOK=\u00bf Desea continuar con el proceso ?
+errorAcumularDiferencia=El periodo a procesar de autoliquidaciones no coincide con la fecha hasta de Par\u00e1metros Reportes y Par\u00e1metros Liquidacion. Por favor cambie las fechas para que coincidan con el per\u00edodo.
+acumularDiferenciaOK=\u00bfDesea continuar con el proceso ?
 headerIbc=Valor IBC
 editarTipoEntidadD=Tipo Entidad
 operacionEnProceso=Operacion en proceso. Por favor, espere ...
 mostrarTodo=[Mostrar Todos]
+infoRegistro=Registros: 
