--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontabletotal.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontabletotal.properties
@@ -148,3 +148,5 @@ planoGeneradoOK=El archivo plano del reporte se cre\u00f3 satisfactoriamente en 
 deseaGuardarTxt=\u00bfDesea guardar el archivo anterior en su equipo?
 descargar=Descargar
 infoRegistros=Registros:
+generarReporte=Generar Reporte.
+errorReporte=Error generando el reporte
