--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadcesantiasrc.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadcesantiasrc.properties
@@ -49,3 +49,6 @@ beneficiarios=Beneficiarios
 todas=Todas las novedades
 noliq=Novedades no Liquidadas
 emplnoliq=Empleados con novedades de Cesant\u00edas no Liquidadas
+validacionvlrcesantias=El empleado no cuenta con un saldo de Cesant\u00edas
+validacionvlrintcesantias=El empleado no cuenta con un saldo de Interedes de Cesant\u00edas
+validacionvlrsolicitado=Por favor ingrese un saldo de Cesant\u00edas e Intereses de Cesant\u00edas
