--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametroautoliq.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametroautoliq.properties
@@ -116,15 +116,15 @@ textING=Ingreso
 textRET=Retiro
 textTDA=Traslado desde otra administradora
 textTAA=Traslado a otra administradora
-textVSP=Variacion permanente de salario
+textVSP=Variaci\u00f3n permanente de salario
 textVTE=...
-textVST=Variacion transitoria de salario
-textSLN=Suspencion temporal del contrato o licencia no remunerada
+textVST=Variaci\u00f3n transitoria de salario
+textSLN=Suspenci\u00f3n temporal del contrato o licencia no remunerada
 textIGE=...
 textLMA=...
 textVCA=Vacaciones
 textAVP=Aporte voluntario
-textVCT=Variacion centro de trabajo
+textVCT=Variaci\u00f3n centro de trabajo
 textIRP=Incapacidad por accidente de trabajo o enfermedad profesional
 textSUS=...
 textINTE=Integral
@@ -140,11 +140,11 @@ codigoNAFP=Codigo NAFP
 egValor=EG Valor
 egAutorizacion=EG Autorizacion
 maternidadValor=Maternidad Valor
-maternidadAuto=Maternidad Autorizacion
+maternidadAuto=Maternidad Autorizaci\u00f3n
 upcValor=UPC Valor
 tipo=Tipo Empleado
 textTP=Tipo de Pensionado
-textPC=Pension Compartida
+textPC=Pensi\u00f3n Compartida
 textEXTR=Extranjero
 fechaIngreso=Fecha Ingreso
 subTipoCotizante=Sub Tipo Cotizante
@@ -332,12 +332,12 @@ tarifaMENX=Tarifa MEN
 aporteEntidadM=Aportes Entidades
 buscarBA=Buscar Aporte: 
 errorProcesoLiquidacionFechas=El per\u00edodo a procesar de autoliquidaci\u00f3n no coincide con las fechas hasta de Par\u00e1metro Reportes y Par\u00e1metros Estructuras. \u00bfDesea cambiar las fechas autom\u00e1ticamente?
-procesoLiquidacionOK=\u00bf Desea continuar con el proceso de liquidacion ?
-confirmarBorrarTodoAuto=\u00bf Esta seguro de borrar ?
-errorAcumularDiferencia=El periodo a procesar de autoliquidaciones no coincide con la fecha hasta de Par\u00e1metros Reportes y Par\u00e1metros Liquidacion. Por favor cambie las fechas para que coincidan con el per\u00edodo.
+procesoLiquidacionOK=\u00bfDesea continuar con el proceso de liquidaci\u00f3n ?
+confirmarBorrarTodoAuto=\u00bfEsta seguro de borrar ?
+errorAcumularDiferencia=El per\u00edodo a procesar de autoliquidaciones no coincide con la fecha hasta de Par\u00e1metros Reportes y Par\u00e1metros Liquidacion. Por favor cambie las fechas para que coincidan con el per\u00edodo.
 acumularDiferenciaOK=\u00bfDesea continuar con el proceso ?
 headerIbc=Valor IBC
 editarTipoEntidadD=Tipo Entidad
-operacionEnProceso=Operacion en proceso. Por favor, espere ...
+operacionEnProceso=Operaci\u00f3n en proceso. Por favor, espere ...
 mostrarTodo=[Mostrar Todos]
 infoRegistro=Registros: 
