--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/personaindividual.properties
@@ -25,11 +25,10 @@ aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar un nuevo acto inseguro es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
-cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
+cambio=A\u00fan hay cambios sin guardar, \u00bfDesea guardar los cambios?
 refrescar= Deshacer cambios no guardados
 salir=Salir
 ##
-
 titulo=Ingreso Nuevo Personal
 infoBasica=Ingrese los datos basicos del empleado nuevo. Tenga en cuenta que la informacion que se solicita en este formulario es basica para poder liquidar al trabajador. Si desea completar informacion adicional puede ingresar a Datos Personales despues de insertar al empleado.
 informacionPersona=Informacion Nuevo Empleado
@@ -58,7 +57,7 @@ fechaUltimoPago=Fecha Ultimo Pago
 nombreCargo=Nombre del Cargo
 motivoCargo=Motivo del Cargo
 nombreEstructuraCargo=Nombre Estructura Cargo
-papelDesempe\u00f1ado=Papel Desempe\u00f1ado
+papelDesempenado=Papel Desempe\u00f1ado
 descripcionEstructura=Descripcion de la Estructura
 descripcionMotivo=Descripcion del Motivo
 empleadoJefe=Empleado Jefe
@@ -92,7 +91,7 @@ modAfiliaciones=Afiliaciones
 eps=E.P.S.(Entidad Promotora de Salud)
 afp=A.F.P.(Aseguradora de Fondos de Pensiones)
 fondoCensantias=Fondo de Censantias
-arp=A.R.P.(Aseguradora de Riesgos Profesionales)
+arp=A.R.L.(Aseguradora de Riesgos Laborales)
 cajaCompensacion=Caja de Compensacion
 camposOpcionales=Los siguientes campos son opcionales
 modFactorRH=Factor RH
@@ -145,10 +144,10 @@ nombreEstructura=Nombre Estructura
 papelM=Papeles
 buscarPCD=Buscar Papel: 
 nombrePapel=Nombre Papel
-editarCargoCargoDesempe\u00f1ado=Nombre del Cargo Desempe\u00f1ado
-editarMotivoCargoDesempe\u00f1ado=Motivo del Cargo Desempe\u00f1ado
-editarEstructuraCargoDesempe\u00f1ado=Nombre Estructura Cargo
-editarPapelCargoDesempe\u00f1ado=Papel Desempe\u00f1ado
+editarCargoCargoDesempenado=Nombre del Cargo Desempe\u00f1ado
+editarMotivoCargoDesempenado=Motivo del Cargo Desempe\u00f1ado
+editarEstructuraCargoDesempenado=Nombre Estructura Cargo
+editarPapelCargoDesempenado=Papel Desempe\u00f1ado
 jefeM=Empleados
 buscarEJCD=Buscar Empleado: 
 empleado=Nombre Empleado
@@ -156,7 +155,7 @@ editarEmpleadoJefeCargoDesempe\u00f1ado=Empleado Jefe
 estructuraM2=Estructuras Centros Costos
 buscarECC=Buscar Estructura: 
 codigoCentroCosto=Codigo Centro Costo
-codigo=c\u00f3digo
+codigo=C\u00f3digo
 nombreCentroCosto=Nombre Centro Costo
 motivoLocalizacionM=Motivos Localizaciones
 buscarMLCC=Buscar Motivo: 
@@ -220,14 +219,14 @@ editarJornadaJornadaLaboral=Descripcion Jornada Laboral
 terceroM=Terceros Sucursales
 buscarTA=Buscar Tercero: 
 editarEPSAfiliacion=Descripcion Tercero EPS
-editarARPAfiliacion=Descripcion Tercero ARP
+editarARPAfiliacion=Descripcion Tercero ARL
 editarAFPAfiliacion=Descripcion Tercero AFP
 editarFondoAfiliacion=Descripcion Tercero Fondo
 editarCajaAfiliacion=Descripcion Tercero Caja
 tercero=Tercero
 advertenciaEPS=\u00bf Esta totalmente seguro que el tercero seleccionado es considerado como una entidad EPS ?
 advertenciaAFP=\u00bf Esta totalmente seguro que el tercero seleccionado es considerado como una entidad AFP ?
-advertenciaARP=\u00bf Esta totalmente seguro que el tercero seleccionado es considerado como una entidad ARP ?
+advertenciaARP=\u00bf Esta totalmente seguro que el tercero seleccionado es considerado como una entidad ARL ?
 estadoCivilM=Estados Civiles
 buscarECEC=Buscar Estado Civil: 
 editarEstadoEstadoCivil=Descripcion Estado Civil
@@ -246,8 +245,8 @@ errorNumeroTelefonico=El numero telefonico ingresado es incorrecto
 errorTopeEmpleadosEmpresa=\u00a1\u00a1\u00a1 Se ha superado el tope de empleados licenciados !!! Por favor contacte a su distribuidor.
 errorEmpleadoRegistrado=La cedula que digito ya existe como persona y empleado.
 errorPersonaRepetida=La cedula que digito ya existe solo como persona. Despues de ingresar este empleado favor verificar los datos laborales.
-errorCodigoTerceroPersona=\u00a1Esta ingresando un codigo de Tercero (nit de empleado) que no existe en el sistema contable. Por favor, antes de ingresar este registro en n\u00f3mina, valide primero con contabilidad!.
-errorIngresoTotalRegistro=\u00a1\u00a1\u00a1No se puede ingresar el registro en Designer.RHN!!! Por favor salga de esta pantalla.
+errorCodigoTerceroPersona=\u00a1 Esta ingresando un codigo de Tercero (nit de empleado) que no existe en el sistema contable. Por favor, antes de ingresar este registro en n\u00f3mina, valide primero con contabilidad!
+errorIngresoTotalRegistro=\u00a1\u00a1\u00a1 No se puede ingresar el registro en Designer.RHN!!! Por favor salga de esta pantalla.
 errorEmpleadoDuplicado=\u00a1El empleado ya existe!
 aletarTiposTrabajadoresTS=La combinacion para el tipo trabajador y tipo compensaci\u00f3n no es v\u00e1lida, por favor verifique este dato.
 aletarTiposTrabajadoresRL=La combinacion para el tipo trabajador y tipo salario no es v\u00e1lida, por favor verifique este dato
@@ -268,7 +267,7 @@ infoNormaNormaLaboral=Para ingresar el campo Norma Laborall es necesario ingresa
 infoSueldoSuelo=Para ingresar el campo Tipo Compensacion es necesario ingresar primero el tipo trabajador.
 infoSalarioTipoSalario=Para ingresar el campo Tipo Salario es necesario ingresar primero el tipo trabajador.
 infoEstructuraCentroCosto=Para ingresar el campo Estructura es necesario ingresar primero la empresa.
-infoEstructuraCargoDesempe\u00f1ado=Para ingresar el campo Estructura es necesario ingresar primero la empresa y la fecha de ingreso.
+infoEstructuraCargoDesempenado=Para ingresar el campo Estructura es necesario ingresar primero la empresa y la fecha de ingreso.
 informacion=Informaci\u00f3n
 operacionProceso=Operacion en proceso. Por favor espere...
 nit=NIT
@@ -282,7 +281,7 @@ ingreseciudadna=Seleccione la Ciudad de Nacimiento
 nombrecargo=Seleccione el nombre del Cargo
 motivocargo=Seleccione el motivo del Cargo
 estructuracargo=Seleccione la estructura del Cargo
-papeldesem=Seleccione el Papel Desempe\u00f1ado
+papeldesem=Seleccione el Papel Desempenado
 empleadojefe=Seleccione el Empleado Jefe
 motivolocalizacion=Seleccione el motivo de Ingreso
 estructuracc=Seleccione el Centro de Costo
@@ -300,10 +299,8 @@ jornadala=Seleccione la Jornada Laboral
 formapago=Seleccione la forma de Pago
 sucursalPago=Seleccione la sucursal de pago
 metodopago=Seleccione el m\u00e9todo de pago
-selecciontercero=Por favor seleccione una Entidad de Afiliaci\u00f3n a
-advertenciaSeleccionTipoT="Hay Listas por cargar, Por favor seleccione un Tipo de Trabajador."
+selecciontercero=Por favor seleccione una Entidad de Afiliaci\u00f3n a 
 ciudadresidencia=Seleccione la ciudad de Residencia
 estadocivil=Seleccione el Estado Civil
 tipotelefono=Seleccione el Tipo de Tel\u00e9fono
 ciudadtelefono=Seleccione la Ciudad del Tel\u00e9fono
-
