--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportepersonal.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportepersonal.properties
@@ -1,11 +1,11 @@
 #Titulo y Fieldsets
 titulo=Reportes Predefinidos - Datos Personales
-parametros=Parametros
+parametros=Par\u00e1metros
 reportes=Reportes Predefinidos - Datos Personales
 #Botones
 mostrar=Mostrar Todos
 buscar=Buscar Reporte
-envio=Envio por Correo
+envio=Env\u00edo por Correo
 #TABLA
 codigo=C\u00f3digo
 reporte=Reporte
@@ -27,8 +27,8 @@ fechadesde=Fecha Desde
 empleadodesde=Empleado Desde
 solicitud=Solicitud
 estadocivil=Estado Civil
-tipotelefono=Tipo Telefono
-jefedivisionrh=Jefe Division RH
+tipotelefono=Tipo Tel\u00e9fono
+jefedivisionrh=Jefe Divisi\u00f3n RH
 rodamiento=Rodamiento
 fondo=Fondo Cumplea\u00f1os
 hasta=Hasta
@@ -47,7 +47,7 @@ cumple3=Memo con bombas
 cumple4=Vaquita - Estoy feliz por tu cumplea\u00f1os     
 cumple5=Memo - Cuenta siempre conmigo
 cumple6=Ni\u00f1a - Feliz Dia
-cumple7=Todos - Ahora si te llego el d\u00eca                               
+cumple7=Todos - Ahora si te llego el d\u00eda                               
 cumple8=Jirafa - Que tengas un dulce cumplea\u00f1os
 cumple9=Vaquita - En tu cumplea\u00f1os dejate querer
 cumple10=Memo - Si sigues haciendo esto nos vamos a envejecer
@@ -65,23 +65,23 @@ nombreR=Nombre
 tipoR=Tipo
 #Dialogo de Correos
 envioporcorreo=Env\u00edo Por Correo
-enviarcorreo=Esta pantalla permite el env\u00edo de reportes de n\u00f3mina v\u00eda email, debe tener en cuenta que la generaci\u00f3n de cualquier reporte depende de los parametros de n\u00f3mina que usted halla configurado. Recuerde que la direcci\u00f3n de env\u00edo debe ser del dominio de la Empresa.
+enviarcorreo=Esta pantalla permite el env\u00edo de reportes de n\u00f3mina v\u00eda e-mail, debe tener en cuenta que la generaci\u00f3n de cualquier reporte depende de los par\u00e1metros de n\u00f3mina que usted ha configurado. Recuerde que la direcci\u00f3n de env\u00edo debe ser del dominio de la Empresa.
 reporte=Reporte
-tipoeducacion=Tipo Educacion Formal -secundaria, universitaria etc. (Grafico)
+tipoeducacion=Tipo Educaci\u00f3n Formal -secundaria, universitaria etc. (Grafico)
 de=De: 
 para=Para: 
 cc=Cc: 
 asunto=Asunto: 
 registrodeenvios=Registro de Env\u00edos
 #LOV Empleado Desde
-codigoEMP=Codigo Empleado Desde
+codigoEMP=C\u00f3digo Empleado Desde
 buscarEMP=Buscar Empleado: 
-codigooEMP=Codigo Empleado
+codigooEMP=C\u00f3digo Empleado
 nombreEMP=Nombre Empleado
 #LOV Empleado Hasta
-codigoEMPH=Codigo Empleado Hasta
+codigoEMPH=C\u00f3digo Empleado Hasta
 buscarEMPH=Buscar Empleado: 
-codigooEMPH=Codigo Empleado
+codigooEMPH=C\u00f3digo Empleado
 nombreEMPH=Nombre Empleado
 #LOV Empresa
 empresaE=Empresa
@@ -91,22 +91,22 @@ nombreE=Nombre
 #LOV ESTRUCTURAS
 estructurasES=Estructuras
 buscarES=Buscar Estructura: 
-codigoES=Codigo
+codigoES=C\u00f3digo
 nombreES=Nombre
 empresaES=Empresa
 #LOV TIPO TRABAJADOR
 tipotrabajadorTT=Tipo Trabajador
 buscarTT=Buscar Tipo Trabajador: 
-codigoTT=Codigo
+codigoTT=C\u00f3digo
 nombreTT=Nombre
 tipoTT=Tipo
 #LOV ESTADO CIVIL
 estadocivilEC=Estado Civil
 buscarEC=Buscar Estado Civil: 
-descripcionEC=Descripcion
+descripcionEC=Descripci\u00f3n
 #LOV TIPO TELEFONO
-tipotelefonoTTE=Tipo Telefono
-buscarTTE=Buscar Tipo Telefono: 
+tipotelefonoTTE=Tipo Tel\u00e9fono
+buscarTTE=Buscar Tipo Tel\u00e9fono: 
 #LOV CIUDADES
 ciudadesC=Ciudades
 buscarC=Buscar Ciudad: 
@@ -114,11 +114,11 @@ nombreC=Nombre Ciudad
 #LOV DEPORTES
 deportesD=Deportes
 buscarD=Buscar Deporte: 
-descripcionD=Descripcion
+descripcionD=Descripci\u00f3n
 #LOV AFICIONES
 aficionesA=Aficiones
-buscarA=Buscar Aficion: 
-aficionA=Aficion
+buscarA=Buscar Afici\u00f3n: 
+aficionA=Afici\u00f3n
 #LOV IDIOMAS
 idiomasI=Idiomas
 buscarI=Buscar Idioma: 
@@ -127,7 +127,7 @@ nombreI=Nombre
 jefedivisionJ=Jefe Divisi\u00f3n de Recursos Humanos
 buscarJ=Buscar Jefe: 
 secuenciaJ=Secuencia
-jefeJ=Jefe de Division
+jefeJ=Jefe de Divisi\u00f3n
 #EDITAR
 editarFechaDesde=Fecha Desde Parametrizaci\u00f3n
 empleadoDesde=Empleado Desde Parametrizaci\u00f3n
@@ -155,13 +155,15 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar un nuevo reporte es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
-cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+cambio=A\u00fan hay cambios sin guardar, \u00bfDesea guardar los cambios?
+refrescar= Deshacer cambios no guardados
 #Tipos
 pdf=PDF
 xhtml=XHTML
@@ -170,11 +172,20 @@ xlsx=XLSX
 csv=CSV
 docx=DOCX
 reportesR=Reportes
-infoReporteCodigoD=Codigo Reporte
+infoReporteCodigoD=C\u00f3digo Reporte
 infoReporteNombreD=Nombre Reporte
 errorRegNew=Los campos Fecha Desde- Fecha Hasta- Empleado Desde - Empleado Hasta son obligatorios.
-errorFechas=La fecha hasta es menor a la fecha desde del parametro.
+errorFechas=La fecha hasta es menor a la fecha desde del par\u00e1metro.
 mostrarTodos=Mostrar todos los reportes.
 buscarReporte=Buscar Reportes.
 generarReporte=Generar Reporte.
 salir=Salir
+generandoReporte=Generando reporte, esto puede tardar un instante...
+mensajeExitoReporte=Reporte generado con exito.
+descargar=Descargar
+errorReporte=Error generando el reporte
+envioLote=Envio de lotes para el envio de gesti\u00f3n documental.
+mostrarTodos=Mostrar todos los reportes.
+buscarReporte=Buscar Reportes.
+generarReporte=Generar Reporte.
+infoRegistro=Registros:
