--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/odiscabeceras.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/odiscabeceras.properties
@@ -56,3 +56,5 @@ tipoTrabajadorN=Tipo Trabajador:
 operacionEnProceso=Operaci\u00f3n en proceso. Por favor, espere ...
 infoRegistros=Registros: 
 seleccionartabla=Por favor seleccione la tabla a la cual le quiere crear un nuevo registro:
+a\u00f1ox= A\u00f1o
+btnrecolectar=Recolectar el pago de las incapacidades ingresadas como pago por fuera de n\u00f3mina (Conceptos asociados en los grupos 61,62,63 y 64)
