--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/cerrarliquidacion.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/cerrarliquidacion.properties
@@ -28,6 +28,8 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
+informacion=Informaci\u00f3n
+error=\u00a1Error!
 atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
