--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontabletotal.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/interfasecontabletotal.properties
@@ -150,3 +150,4 @@ descargar=Descargar
 infoRegistros=Registros:
 generarReporte=Generar Reporte.
 errorReporte=Error generando el reporte
+generandoReporte=Generando reporte, esto puede tardar algunos minutos...
