--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplcomprobante.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplcomprobante.properties
@@ -49,14 +49,15 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar un nuevo registro es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
-
+refrescar=Deshacer cambios no guardados
 #NuevoRegistro
 nuevoregistro=Nuevo Registro
 nuevoRegistroPagina=Seleccione la tabla para ingresar nuevo registro
@@ -102,8 +103,6 @@ rastrostablasno=' no existe en RASTROSTABLAS, y no tiene registros asociados."
 objetosDB=' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
 errorRegistroRastro= El registro no tiene rastros.
 porfavor= Por favor seleccione un campo.
-
-
 #LOV PROCESOS
 procesosP=Procesos
 buscarP=Buscar Proceso:
@@ -119,7 +118,6 @@ aclaracion=Aclaraci\u00f3n, el formato extendido requiere haber configurado los 
 #detallesFormulas
 valor=Valor
 formula=Formula
-
 #datosComprobantesExportar
 numeroX=Numero
 fechacomprobanteX=Fecha_Comprobante
