--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/causaausentismo.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/causaausentismo.properties
@@ -59,7 +59,9 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar una nuevo registro es necesario adicionar:
@@ -67,7 +69,7 @@ validacionCodigo=El c\u00f3digo que ingreso ya est\u00e1 registrado, por favor i
 validacionCodigodos=El campo modificado no puede estar vac\u00edo
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
+refrescar= Deshacer cambios no guardados
 salir=Salir
 #EXPORTAR
 codigoX=Codigo
@@ -117,3 +119,4 @@ porcentajeliquidacione=Porcentaje Liquidaci\u00f3n
 restadiasincapacidade=Resta D\u00edas Incapacidad
 #Duplicar Registro CAUSA AUSENTISMO
 duplicarregistro=Duplicar Registro Causa Ausentismo
+infoRegistros = Registros:
