--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/diagnosticoscategorias.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/diagnosticoscategorias.properties
@@ -1,14 +1,3 @@
-# To change this license header, choose License Headers in Project Properties.
-# To change this template file, choose Tools | Templates
-# and open the template in the editor.
-
-titulo=Clase Ausentismo
-titulo1=Clases de Ausentismos
-codigo=C\u00f3digo
-descripcion=Descripci\u00f3n
-tipo=Tipo
-
-
 #Toolbar
 guardar=Guardar
 editar=Editar
@@ -40,30 +29,31 @@ borrado2=Registros
 guardadoExitoso=Se ha guardado correctamente los cambios
 validarNuevo=Para agregar es necesario adicionar:
 atencionRastros=ATENCI\u00d3N
-confirmarRastroHistorico=La tabla CLASESAUSENTISMOS tiene rastros hist\u00f3ricos, \u00bfDesea continuar?
+confirmarRastro=La tabla 'DIAGNOSTICOSCATEGORIAS' tiene rastros para el registro seleccionado,\u00bfDesea continuar?
+confirmarRastroHistorico=La tabla 'DIAGNOSTICOSCATEGORIAS' tiene rastros hist\u00f3ricos, \u00bfDesea continuar?
 errorRastroHistorico=La tabla no tiene rastros historicos.
 errorRegistroRastro=El registro seleccionado no tiene rastros.
 errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
-errorObjetosDB=La tabla 'CLASESAUSENTISMOS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+errorObjetosDB=La tabla 'DIAGNOSTICOSCATEGORIAS' no se encuentra en ObjetosDB. Por favor comunicarse con soporte.
 editarCodigo=Editar Codigo
 nuevoD=Nuevo Registro
 editarDescripcion=Descripci\u00f3n
 editarTipo=Tipo Ausentismo
-nuevoDD=Agregar Nueva Clase Ausentismo
+nuevoDD=Agregar Nuevo Tipo Ausentismo
 codigoD=*Codigo:
 nombreD=*Descripci\u00f3n:
 tipoD=*Tipo:
+codigoX=C\u00f3digo
+descripcionX=Descripci\u00f3n
 #Add
 agregar=Agregar
 #Clean
 limpiar=Limpiar
-duplicarD=Duplicar Registro
-duplicarDD=Duplicar Clase Ausentismo
-codigoE=Codigo
-descripcionE=Descripcion
-tipoE=Tipo
 #Exit
 salir=Salir
 infoRegistros = Registros:
+#Exportar
+codigoexp=C\u00f3digo
+descexp=Descripci\u00f3n
