--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/detalleconcepto.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/detalleconcepto.properties
@@ -10,6 +10,7 @@ tiposdecontratos=Tipos de Contratos
 tiposdesalario=Tipos de Salario
 formulas=F\u00f3rmulas
 detallesdelaformulaseleccionada=Detalles de la F\u00f3rmula Seleccionada
+detalle=Detalles
 #Cuentas y tipo CC
 fechainicial=Fecha Inicial
 fechafinal=Fecha Final
@@ -145,7 +146,7 @@ ingresarnuevoTC=Ingresar nuevo Tipo Contrato
 tipocontratoN=Tipo Contrato: 
 tipocontratoWM=Tipo Contrato
 #Duplicar Registro Tipo Contrato
-DuplicarRegistroVigenciaConceptoTC=Duplicar Registro - Tipos Trabajadores
+DuplicarRegistroVigenciaConceptoTC=Duplicar Registro - Tipos Contratos
 #Nuevo Registro Tipo Salario
 NuevoRegistroVigenciaConceptoRL=Nuevo Registro - Tipos Salarios
 ingresarnuevoRL=Ingresar nuevo Tipo salario
@@ -160,6 +161,8 @@ nombreformulaN=Nombre Formula:
 nombreformulaWM=Nombre Formula
 ordenN=Orden: 
 ordenWM=Orden Liquidaci\u00f3n
+refrescar=Deshacer cambios no guardados
+salir=Salir
 #Duplicar Registro Formulas
 DuplicarRegistroFormulaConcepto=Duplicar Registro - Formulas
 #Editar
@@ -226,15 +229,27 @@ no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+informacion=Informaci\u00f3n
+error=\u00a1Error!
+atencion=\u00a1Precauci\u00f3n!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar un nuevo acto inseguro es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
-refrescar= Refrescar
-salir=Salir
 #Para historicos
 seleccionar=Seleccione la tabla para consultar rastros Historicos
 rastros=Rastros Historicos
 infoRegistro=Registros:
+operacionProceso=Operacion en proceso. Por favor espere...
+operacionProcesoLovs=Cargando Listas de Valor. Por favor espere...
+#RASTRO
+confirmarRastro=La Tabla tiene rastros para el registro seleccionado, \u00bfdesea continuar?
+confirmarRastroHistorico=La Tabla tiene rastros historicos, \u00bfDesea continuar?
+errorRastroHistorico=La tabla no tiene rastros historicos.
+errorRegistroRastro=El registro seleccionado no tiene rastros.
+errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
+errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
+seleccionarRegistro=Por favor seleccione un registro.
+errorObjetosDB=La Tabla no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+continuar=Continuar
