--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/detalleconcepto.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/detalleconcepto.properties
@@ -253,3 +253,4 @@ errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros as
 seleccionarRegistro=Por favor seleccione un registro.
 errorObjetosDB=La Tabla no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
 continuar=Continuar
+proceso==Proceso
